# 3d-curves-cpp

./: .gitignore  CMakeLists.txt
demo/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/include/curves/: pch.h
lib/include/curves/intersection3d/: ModelIntersection.h
lib/include/curves/math/: Constants.h  CoordStorage.h  CoordStorage.hpp  LinearAlgebra.h  LinearAlgebra.hpp  Point.h  Vector.h  Vector.hpp
lib/include/curves/model3d/: Circle.h  Curve.h  CurveFactory.h  Ellipse.h  Helix.h
lib/src/curves/intersection3d/: ModelIntersection.cpp
lib/src/curves/model/: Circle.cpp  CurveFactory.cpp  Ellipse.cpp
lib/src/curves/model3d/: Circle.cpp  CurveFactory.cpp  Ellipse.cpp  Helix.cpp
tests/: CMakeLists.txt  test_circle.cpp  test_ellipse.cpp  test_helix.cpp
